--- a/LinkerPlayer/Windows/PropertiesWindow.xaml
+++ b/LinkerPlayer/Windows/PropertiesWindow.xaml
@@ -24,6 +24,7 @@
 
       <!--  Converters  -->
       <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+      <local:InverseBooleanConverter x:Key="InverseBooleanConverter" />
       <local:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
       <local:BpmRowVisibilityConverter x:Key="BpmRowVisibilityConverter" />
       <local:InverseBpmRowVisibilityConverter x:Key="InverseBpmRowVisibilityConverter" />
@@ -89,8 +90,18 @@
         d:Foreground=" White"
         FontSize="{DynamicResource FontSizeTitle}"
         FontWeight="Light"
-        Foreground="{DynamicResource TitleBarForegroundBrush}"
-        Text="Properties" />
+        Foreground="{DynamicResource TitleBarForegroundBrush}">
+        <TextBlock.Style>
+          <Style TargetType="TextBlock">
+            <Setter Property="Text" Value="Properties" />
+            <Style.Triggers>
+              <DataTrigger Binding="{Binding IsMultipleSelection}" Value="True">
+                <Setter Property="Text" Value="{Binding SelectedFilesCount, StringFormat='Properties - {0} files selected'}" />
+              </DataTrigger>
+            </Style.Triggers>
+          </Style>
+        </TextBlock.Style>
+      </TextBlock>
 
       <StackPanel
         HorizontalAlignment="Right"
@@ -191,6 +202,7 @@
               MaxHeight="Infinity"
               Margin="0,0,0,4"
               AutoGenerateColumns="False"
+              BeginningEdit="MetadataDataGrid_BeginningEdit"
               CanUserAddRows="False"
               CanUserResizeRows="False"
               CellStyle="{StaticResource PropertiesWindowDataGridCellStyle}"
@@ -199,10 +211,9 @@
               ItemsSource="{Binding MetadataItems}"
               PreviewMouseWheel="DataGrid_PreviewMouseWheel"
               RowStyle="{StaticResource PropertiesWindowDataGridRowStyle}"
+              SelectionChanged="DataGrid_SelectionChanged"
               Style="{StaticResource SharedDataGridStyle}"
-              VerticalScrollBarVisibility="Disabled"
-              BeginningEdit="MetadataDataGrid_BeginningEdit"
-              SelectionChanged="DataGrid_SelectionChanged">
+              VerticalScrollBarVisibility="Disabled">
 
               <DataGrid.Columns>
                 <DataGridTextColumn
@@ -340,8 +351,8 @@
               AcceptsReturn="True"
               BorderThickness="0"
               FontSize="{DynamicResource FontSizeNormal}"
-              IsReadOnly="True"
               GotFocus="CommentTextBox_GotFocus"
+              IsReadOnly="True"
               LostFocus="CommentTextBox_LostFocus"
               MouseDoubleClick="CommentTextBox_MouseDoubleClick"
               PreviewKeyDown="CommentTextBox_PreviewKeyDown"
@@ -403,9 +414,9 @@
               ItemsSource="{Binding PropertyItems}"
               PreviewMouseWheel="DataGrid_PreviewMouseWheel"
               RowStyle="{StaticResource PropertiesWindowDataGridRowStyle}"
+              SelectionChanged="DataGrid_SelectionChanged"
               Style="{StaticResource SharedDataGridStyle}"
-              VerticalScrollBarVisibility="Disabled"
-              SelectionChanged="DataGrid_SelectionChanged">
+              VerticalScrollBarVisibility="Disabled">
 
               <DataGrid.Columns>
                 <DataGridTextColumn
@@ -425,76 +436,148 @@
               </DataGrid.Columns>
             </DataGrid>
 
-            <!--  ReplyGain Title with Bar  -->
+            <!--  ReplayGain Title with Bar  -->
             <Grid Grid.Row="6" Margin="0,0,0,5">
-              <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
+    <Grid.ColumnDefinitions>
+       <ColumnDefinition Width="Auto" />
+         <ColumnDefinition Width="*" />
+    <ColumnDefinition Width="Auto" />
               </Grid.ColumnDefinitions>
-              <TextBlock
+         
+           <TextBlock
+             Grid.Column="0"
                 VerticalAlignment="Center"
-                FontSize="{DynamicResource FontSizeHeading}"
-                FontWeight="Normal"
-                Foreground="{DynamicResource ControlAccentLightBrush}"
-                Text="ReplayGain" />
-              <Rectangle
+      FontSize="{DynamicResource FontSizeHeading}"
+     FontWeight="Normal"
+      Foreground="{DynamicResource ControlAccentLightBrush}"
+   Text="ReplayGain" />
+   
+   <Rectangle
                 Grid.Column="1"
                 Height="1.5"
-                Margin="8,3,0,0"
-                VerticalAlignment="Center"
-                Fill="{DynamicResource ControlAccentLightBrush}" />
-            </Grid>
+         Margin="8,3,8,0"
+       VerticalAlignment="Center"
+         Fill="{DynamicResource ControlAccentLightBrush}" />
+           
 
-            <DataGrid
+           <!--  ReplayGain Calculation Controls  -->
+           <StackPanel
+     Grid.Column="2"
+          HorizontalAlignment="Right"
+    VerticalAlignment="Center"
+   Orientation="Horizontal">
+    
+       <!--  Calculate Button (hyperlink style, similar to BPM)  -->
+          <Button
+           Padding="0"
+                  HorizontalAlignment="Right"
+       Background="Transparent"
+           BorderThickness="0"
+        Command="{Binding CalculateReplayGainCommand}"
+        Cursor="Hand"
+           FontSize="12"
+      ToolTip="Analyze audio file to calculate ReplayGain values"
+       Visibility="{Binding IsReplayGainCalculating, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
+                <TextBlock
+    Foreground="{DynamicResource TrackListHyperlinkForegroundBrush}"
+ Text="Calculate..."
+       TextDecorations="Underline" />
+  <Button.Style>
+<Style TargetType="Button">
+    <Setter Property="Template">
+               <Setter.Value>
+         <ControlTemplate TargetType="Button">
+  <ContentPresenter />
+    </ControlTemplate>
+  </Setter.Value>
+       </Setter>
+          <Style.Triggers>
+               <Trigger Property="IsMouseOver" Value="True">
+      <Setter Property="Opacity" Value="0.7" />
+ </Trigger>
+         </Style.Triggers>
+  </Style>
+   </Button.Style>
+          </Button>
+
+  <!--  Progress indicator when calculating  -->
+       <StackPanel
+               Orientation="Horizontal"
+       Visibility="{Binding IsReplayGainCalculating, Converter={StaticResource BooleanToVisibilityConverter}}">
+    <ProgressBar
+      Width="80"
+     Height="16"
+        Margin="0,0,8,0"
+          Maximum="100"
+    Minimum="0"
+    Value="{Binding ReplayGainCalculationProgress}" />
+       <TextBlock
+             VerticalAlignment="Center"
+       FontSize="10"
+               Foreground="{DynamicResource TitleBarForegroundBrush}"
+   Text="{Binding ReplayGainCalculationStatus}" />
+   <Button
+        Width="50"
+      Height="22"
+      Margin="8,0,0,0"
+         Padding="4,2"
+     Command="{Binding CancelReplayGainCalculationCommand}"
+          Content="Cancel"
+        FontSize="10" />
+     </StackPanel>
+              </StackPanel>
+         </Grid>
+
+ <DataGrid
               x:Name="ReplayGainDataGrid"
-              Grid.Row="7"
+      Grid.Row="7"
               Height="Auto"
-              MinWidth="400"
-              MaxHeight="Infinity"
-              Margin="0,0,0,10"
-              AutoGenerateColumns="False"
+       MinWidth="400"
+          MaxHeight="Infinity"
+           Margin="0,0,0,10"
+       AutoGenerateColumns="False"
               BeginningEdit="ReplayGainDataGrid_BeginningEdit"
               CanUserAddRows="False"
-              CanUserResizeRows="False"
-              CellStyle="{StaticResource PropertiesWindowDataGridCellStyle}"
-              ColumnHeaderStyle="{StaticResource SharedDataGridColumnHeaderStyle}"
-              HorizontalScrollBarVisibility="Disabled"
-              ItemsSource="{Binding ReplayGainItems}"
-              PreviewMouseWheel="DataGrid_PreviewMouseWheel"
-              RowStyle="{StaticResource PropertiesWindowDataGridRowStyle}"
+          CanUserResizeRows="False"
+  CellStyle="{StaticResource PropertiesWindowDataGridCellStyle}"
+  ColumnHeaderStyle="{StaticResource SharedDataGridColumnHeaderStyle}"
+      HorizontalScrollBarVisibility="Disabled"
+         ItemsSource="{Binding ReplayGainItems}"
+      PreviewMouseWheel="DataGrid_PreviewMouseWheel"
+   RowStyle="{StaticResource PropertiesWindowDataGridRowStyle}"
+          SelectionChanged="DataGrid_SelectionChanged"
               Style="{StaticResource SharedDataGridStyle}"
-              VerticalScrollBarVisibility="Disabled"
-              SelectionChanged="DataGrid_SelectionChanged">
+      VerticalScrollBarVisibility="Disabled">
 
-              <DataGrid.Columns>
-                <DataGridTextColumn
-                  Width="240"
-                  MinWidth="100"
-                  Binding="{Binding Name}"
-                  CanUserResize="True"
-                  Header="Name"
-                  IsReadOnly="True" />
-                <DataGridTemplateColumn
-                  Width="*"
-                  MinWidth="100"
-                  CanUserResize="True"
-                  Header="Value">
-                  <DataGridTemplateColumn.CellTemplate>
-                    <DataTemplate>
-                      <TextBlock IsEnabled="{Binding IsEditable}" Text="{Binding Value}" />
-                    </DataTemplate>
-                  </DataGridTemplateColumn.CellTemplate>
-                  <DataGridTemplateColumn.CellEditingTemplate>
-                    <DataTemplate>
-                      <TextBox IsEnabled="{Binding IsEditable}" Text="{Binding Value, UpdateSourceTrigger=PropertyChanged}" />
-                    </DataTemplate>
-                  </DataGridTemplateColumn.CellEditingTemplate>
-                </DataGridTemplateColumn>
+           <DataGrid.Columns>
+           <DataGridTextColumn
+        Width="240"
+ MinWidth="100"
+  Binding="{Binding Name}"
+       CanUserResize="True"
+            Header="Name"
+    IsReadOnly="True" />
+   <DataGridTemplateColumn
+         Width="*"
+               MinWidth="100"
+ CanUserResize="True"
+       Header="Value">
+          <DataGridTemplateColumn.CellTemplate>
+           <DataTemplate>
+  <TextBlock IsEnabled="{Binding IsEditable}" Text="{Binding Value}" />
+            </DataTemplate>
+           </DataGridTemplateColumn.CellTemplate>
+      <DataGridTemplateColumn.CellEditingTemplate>
+           <DataTemplate>
+       <TextBox IsEnabled="{Binding IsEditable}" Text="{Binding Value, UpdateSourceTrigger=PropertyChanged}" />
+      </DataTemplate>
+      </DataGridTemplateColumn.CellEditingTemplate>
+     </DataGridTemplateColumn>
               </DataGrid.Columns>
-            </DataGrid>
+ </DataGrid>
 
-            <!--  Picture Title with Bar  -->
-            <Grid Grid.Row="8" Margin="0,0,0,5">
+    <!--  Picture Title with Bar  -->
+     <Grid Grid.Row="8" Margin="0,0,0,5">
               <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
@@ -538,9 +621,9 @@
                 ItemsSource="{Binding PictureInfoItems}"
                 PreviewMouseWheel="DataGrid_PreviewMouseWheel"
                 RowStyle="{StaticResource PropertiesWindowDataGridRowStyle}"
+                SelectionChanged="DataGrid_SelectionChanged"
                 Style="{StaticResource SharedDataGridStyle}"
-                VerticalScrollBarVisibility="Disabled"
-                SelectionChanged="DataGrid_SelectionChanged">
+                VerticalScrollBarVisibility="Disabled">
 
                 <DataGrid.Columns>
                   <DataGridTextColumn
@@ -618,8 +701,8 @@
               AcceptsReturn="True"
               BorderThickness="0"
               FontSize="{DynamicResource FontSizeNormal}"
-              IsReadOnly="True"
               GotFocus="LyricsTextBox_GotFocus"
+              IsReadOnly="True"
               LostFocus="LyricsTextBox_LostFocus"
               MouseDoubleClick="LyricsTextBox_MouseDoubleClick"
               PreviewKeyDown="LyricsTextBox_PreviewKeyDown"
