--- a/LinkerPlayer/Windows/MainWindow.xaml
+++ b/LinkerPlayer/Windows/MainWindow.xaml
@@ -17,8 +17,7 @@
   Loaded="Window_Loaded"
   ResizeMode="CanResize"
   StateChanged="Window_StateChanged"
-  TextElement.FontSize="14"
-  TextElement.FontWeight="Medium"
+  Style="{DynamicResource {x:Type Window}}"
   TextElement.Foreground="{DynamicResource DefaultTextBrush}"
   UseLayoutRounding="True"
   WindowStartupLocation="CenterScreen"
