--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+<UserControl
   x:Class="LinkerPlayer.UserControls.PlaylistTabs"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -126,7 +126,7 @@
         <Setter Property="AllowDrop" Value="True" />
         <EventSetter Event="DragOver" Handler="TabItem_DragOver" />
         <EventSetter Event="Drop" Handler="TabItem_Drop" />
-        <EventSetter Event="PreviewMouseLeftButtonDown" Handler="TabItem_PreviewMouseLeftButtonDown" />
+        <!--<EventSetter Event="PreviewMouseLeftButtonDown" Handler="TabItem_PreviewMouseLeftButtonDown" />-->
         <Setter Property="Template">
           <Setter.Value>
             <ControlTemplate TargetType="TabItem">
@@ -250,6 +250,7 @@
             ItemsSource="{Binding Tracks}"
             Loaded="DataGrid_Loaded"
             MouseDoubleClick="PlaylistRow_MouseDoubleClick"
+            RequestBringIntoView="PlaylistDataGrid_RequestBringIntoView"
             RowHeaderWidth="0"
             RowHeight="20"
             RowStyle="{StaticResource SharedDataGridRowStyle}"
